1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!

    Checks & Agents:
    * 0168 f5_bigip_pool: Added Wato configuration...
    * 0995 raritan_pdu_outletcount: new check for outlet count of Raritan PX-2000 family PDUs
    * 0169 websphere_mq_channels,ebsphere_mq_queues: New Checks to monitor IBM Websphere MQ Queues and Channels...
    * 1034 Always provide also 64 bit version of Windows agent
    * 0170 hp_proliant_power: New check to monitor the Power Meter on Prolaint Servers and iLO Boards
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 0944 FIX: oracle_tablespaces: fixed calculation of space left and number of remaining increments...
    * 1032 FIX: check_traceroute: Fix option Use DNS, worked vice versa
    * 0171 FIX: hp_blade_psu: Fixed pnp template...

    Multisite:
    * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
    * 1033 New Mutisite filter for the number of services a host has...
    * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime

    WATO:
    * 0990 FIX: Fix HTTP error handling in bulk inventory...
    * 1004 FIX: Fix exception when saving rules, caused by empty item
    * 0947 FIX: WATO snapshots: fixed missing files on restoring nagvis backup domains

    Reporting & Availability:
    * 0991 FIX: Availability: optionally show time stamps as UNIX epoch time...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service

    HW/SW-Inventory:
    * 0167 FIX: mk_inventory.linux: Changed field separator from pipe to tab...
    * 1005 FIX: Fix exception when using pretty-print output format