@@ -37,6 +37,7 @@ g_profile_path = 'profile.out'
 
 if __name__ == "__main__":
     opt_debug        = '--debug' in sys.argv[1:]
+    opt_interactive  = '--interactive' in sys.argv[1:]
     opt_verbose      = '-v' in sys.argv[1:] or '--verbose' in sys.argv[1:]
     if '--profile' in sys.argv[1:]:
         import cProfile
@@ -48,6 +49,7 @@ if __name__ == "__main__":
 else:
     opt_verbose = False
     opt_debug = False
+    opt_interactive = False
 
 #.
 #   .--Pathnames-----------------------------------------------------------.
@@ -121,6 +123,12 @@ def verbose(t):
     if opt_verbose:
         sys.stderr.write(t)
         sys.stderr.flush()
+
+# Abort after an error, but only in interactive mode.
+def interactive_abort(error):
+    if sys.stdout.isatty() or opt_interactive:
+        sys.stderr.write(error + "\n")
+        sys.exit(1)
 
 
 # During setup a file called defaults is created in the modules
@@ -4741,6 +4749,9 @@ OPTIONS:
                  prevents DNS lookups.
   --usewalk      use snmpwalk stored with --snmpwalk
   --debug        never catch Python exceptions
+  --interactive  Some errors are only reported in interactive mode, i.e. if stdout
+                 is a TTY. This option forces interactive mode even if the output
+                 is directed into a pipe or file.
   --procs N      start up to N processes in parallel during --scan-parents
   --checks A,..  restrict checks/inventory to specified checks (tcp/snmp/check type)
   --keepalive    used by Check_MK Mirco Core: run check and --notify in continous
@@ -5615,11 +5626,10 @@ def read_config_files(with_autochecks=True, with_conf_d=True):
             marks_hosts_with_path(_old_all_hosts, all_hosts, _f)
             marks_hosts_with_path(_old_clusters, clusters.keys(), _f)
         except Exception, e:
-            sys.stderr.write("Cannot read in configuration file %s:\n%s\n" % (_f, e))
-            if __name__ == "__main__":
-                sys.exit(3)
-            else:
+            if opt_debug:
                 raise
+            else:
+                interactive_abort("Cannot read in configuration file %s: %s" % (_f, e))
 
     # Strip off host tags from the list of all_hosts.  Host tags can be
     # appended to the hostnames in all_hosts, separated by pipe symbols,
@@ -5878,7 +5888,7 @@ def output_profile():
 # if check_mk is not called as module
 if __name__ == "__main__":
     short_options = 'ASHVLCURODMmd:Ic:nhvpXPNBil'
-    long_options = [ "help", "version", "verbose", "compile", "debug",
+    long_options = [ "help", "version", "verbose", "compile", "debug", "interactive",
                      "list-checks", "list-hosts", "list-tag", "no-tcp", "cache",
                      "flush", "package", "localize", "donate", "snmpwalk", "oid=", "extraoid=",
                      "snmptranslate", "bake-agents",
@@ -5944,6 +5954,8 @@ if __name__ == "__main__":
             opt_nowiki = True
         elif o == '--debug':
             opt_debug = True
+        elif o == '--interactive':
+            opt_interactive = True
         elif o == '-I':
             seen_I += 1
         elif o == "--checks":
